@@ -1,0 +1,6 @@
+namespace libport
+{
+
+  const char* program_name = "";
+
+}
