@@ -1,0 +1,5 @@
+namespace libport
+{
+  extern const char* program_name;
+}
+
